staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hello-node
  name: hello-node
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-node
